--- a/BlazorWebApp.Application/BlazorWebApp.Application.csproj
+++ b/BlazorWebApp.Application/BlazorWebApp.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BlazorWebApp.Domain\BlazorWebApp.Domain.csproj" />
   </ItemGroup>
 
