--- a/BlazorWebApp/BlazorWebApp.WebUI.Client/BlazorWebApp.WebUI.Client.csproj
+++ b/BlazorWebApp/BlazorWebApp.WebUI.Client/BlazorWebApp.WebUI.Client.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="MudBlazor" Version="8.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BlazorWebApp.Application\BlazorWebApp.Application.csproj" />
+  </ItemGroup>
+
 </Project>
